# robust_trading.icml2019

./: Cargo.toml  LICENSE  README.md
lfa/src/lfa/: transformed.rs  vanilla.rs
lfa/src/transforms/: exponential.rs  identity.rs  logistic.rs  softplus.rs  tanh.rs
rsrl/: Cargo.toml
rsrl/examples/: a2c.rs  cacla.rs  dac.rs  q_learning.rs  sarsa_lambda.rs
rsrl/src/: lib.rs
rsrl/src/control/actor_critic/: dac.rs  tdac.rs
rsrl/src/control/gtd/: greedy_gq.rs
rsrl/src/control/mc/: reinforce.rs
rsrl/src/control/td/: expected_sarsa.rs  pal.rs  q_lambda.rs  q_learning.rs  q_sigma.rs  sarsa.rs  sarsa_lambda.rs
rsrl/src/control/totd/: to_q_lambda.rs  to_sarsa_lambda.rs
rsrl/src/domains/: mod.rs
rsrl/src/fa/: mod.rs
rsrl/src/policies/: beta.rs  dirac.rs  gamma.rs  ipp.rs  mod.rs  softmax.rs
rsrl/src/policies/gaussian/: dbuilder.rs  mod.rs
rsrl/src/prediction/gtd/: gtd2.rs  tdc.rs
rsrl/src/prediction/lstd/: ilstd.rs  lambda_lspe.rs  lstd.rs  lstd_lambda.rs  recursive_lstd.rs
rsrl/src/prediction/mc/: gradient_mc.rs
rsrl/src/prediction/td/: td.rs  td_exp.rs  td_lambda.rs  td_var.rs
rstat/: Cargo.toml
rstat/src/: macros.rs
rstat/src/core/: distribution.rs
rstat/src/multivariate/continuous/normal/: bivariate.rs
rstat/src/univariate/continuous/: mod.rs  truncated_normal.rs
src/: lib.rs  utils.rs
src/agents/: mod.rs
src/agents/training/: adversary.rs  mod.rs  trader.rs  zero_sum.rs
src/env/: mod.rs  strategies.rs
src/env/dynamics/: execution.rs  mod.rs  price.rs
